--- a/app/styles/components/_test.scss
+++ b/app/styles/components/_test.scss
@@ -1,6 +1,7 @@
 .row {
 	padding:0;
-	max-width:100%;
+	// max-width:100%;
+	// overflow-x:hidden;
 }
 
 
