--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,12 +55,12 @@ html, body {
 	// margin-top:-20px;
 	height:100%;
 	// overflow-y:auto;
-border: 1px solid blue !important;
+// border: 1px solid blue !important;
 }
 
 .inner-wrap {
 	height:100%;
-border: 1px solid pink !important;
+// border: 1px solid pink !important;
 	// overflow-y:scroll;
 	padding-bottom:2em;
 }
